--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,4 @@ serde = "1.0"
 
 [dependencies.amethyst]
 version = "0.13"
-features = ["sdl_controller", "vulkan"]
-
+features = ["nightly", "sdl_controller", "vulkan"]
